--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-navigation": "2.0.0"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.3",
+    "eslint": "^4.19.1",
+    "eslint-plugin-react": "^7.9.1",
     "exp": "^54.0.1",
     "jest-expo": "^27.0.0"
   }
