--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
+    "babel-preset-flow": "^6.23.0",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.9.1",
     "exp": "^54.0.1",
-    "jest-expo": "^27.0.0"
+    "flow-bin": "^0.74.0",
+    "flow-typed": "^2.4.0",
+    "jest-expo": "^27.0.1"
   }
 }
