Start new Card, cardsTable, and Bank implementation

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "exp": "^55.0.2",
     "flow-bin": "^0.74.0",
     "flow-typed": "^2.4.0",
-    "jest-expo": "^27.0.1"
+    "jest-expo": "^27.0.1",
+    "websql": "^1.0.0"
   }
 }
